# frontier_harness_template

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TEMPLATE_VERSION.md  pyproject.toml
profiles/: app_product.yaml  data_pipeline.yaml  docs_writing.yaml  generic.yaml  infra.yaml  research.yaml  software.yaml  trading_broker.yaml  trading_research.yaml
templates/: .gitignore.j2  ACTIVE_CAMPAIGN.md.j2  AGENTS.md.j2  CHANGELOG.md.j2  CLAUDE.md.j2  PROGRESS.md.j2  PROJECT_STATUS.md.j2  README.md.j2  frontier.yaml.j2  justfile.j2
templates/.claude/: settings.json.j2
templates/.codex/: config.toml.j2
templates/.githooks/: pre-commit.j2  pre-push.j2
templates/.github/: pull_request_template.md.j2
templates/campaigns/: README.md.j2
templates/decisions/: ADR-000-template.md.j2  README.md.j2
templates/docs/: architecture.md.j2  artifact_policy.md.j2  automation_lanes.md.j2  campaign_authoring.md.j2  model_routing.md.j2  operations.md.j2  validation.md.j2  workflow.md.j2
templates/handoffs/: 000-template.md.j2  README.md.j2
templates/reviews/: 000-template.md.j2  README.md.j2
templates/runs/: README.md.j2
templates/specs/: 000-template.md.j2  README.md.j2
templates/tests/: test_canaries.py.j2  test_command_runner.py.j2  test_frontier_config.py.j2  test_git_utils.py.j2  (+9 more)
tests/: test_e2e_workflow2_github.py  test_english_only.py  test_no_unresolved_template_vars.py  test_profiles.py  test_template_rendering.py  test_upgrade_frontier.py
tools/: bootstrap_frontier.py  diff_template.py  e2e_workflow2_github.py  render_templates.py  upgrade_frontier.py
(+97 files in other folders)
